package step1;

/**
 * Created by ethan.kim on 2018. 3. 3..
 */
public class RubberDuck extends Duck {

    @Override
    public void display() {
        System.out.println("RubberDuck");
    }

    @Override
    public void quack() {
        // nothing
    }

    @Override
    public void fly() {
        // nothing
    }
}
