@startuml

title __STEP3's Class Diagram__\n

  package step3 {
    abstract class Duck {
        + setFlyBehavior()
        + setQuackBehavior()
        + performQuack()
        + performFly()
        + swim()
        {abstract} + display()
    }
  }
  

  package step3 {
    interface FlyBehavior {
        {abstract} + fly()
    }
  }
  

  package step3 {
    class FlyNoWay {
        + fly()
    }
  }
  

  package step3 {
    class FlyWithWings {
        + fly()
    }
  }
  

  package step3 {
    class Main {
        {static} + main()
    }
  }
  

  package step3 {
    class MallardDuck {
        + MallardDuck()
        + display()
    }
  }
  

  package step3 {
    class MuteQuack {
        + quack()
    }
  }
  

  package step3 {
    class Quack {
        + quack()
    }
  }
  

  package step3 {
    interface QuackBehavior {
        {abstract} + quack()
    }
  }
  

  package step3 {
    class RubberDuck {
        + RubberDuck()
        + display()
    }
  }
  

  package step3 {
    class Squeak {
        + quack()
    }
  }
  

  Duck o-- FlyBehavior : flyBehavior
  Duck o-- QuackBehavior : quackBehavior
  FlyNoWay -up-|> FlyBehavior
  FlyWithWings -up-|> FlyBehavior
  MallardDuck -up-|> Duck
  MuteQuack -up-|> QuackBehavior
  Quack -up-|> QuackBehavior
  RubberDuck -up-|> Duck
  Squeak -up-|> QuackBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
